--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,18 @@
-header{
-    background: #90a4ae;
+html,body{
+    height: 100%;
+    background-color:#1c1f2b;
+    color:#bdcadb ;
 }
+header{
+    background: #2d3143;
+}
+
+.menuBorder{
+    border-right: 2px solid #2d3143;
+    height: 100vh;
+}
+
+.menu{
+    position: fixed;
+}
+
