--- a/app/views/App/Help.html
+++ b/app/views/App/Help.html
@@ -13,35 +13,49 @@
 
 <div class="container-fluid">
   <div class="row">
-      <div >
-          
-      </div>
-      <div class="col-md-2 menuBorder">
-          <div class="menu">
-             <h4>Index</h4> 
-             <ol>
-                 <li>
-                     <a href="#database" >Database Text</a>
-                     <ol>
-                         <li><a href="#config" >Configuración</a></li>
-                     </ol>
-                 </li>
-                 <li> <a href="#routing" >Routing</a></li>
-             </ol>
-              
-          </div>
+      <div class="col-md-2 ">
+         <div class="menu">
+             <h4 style="text-align:center;">Index</h4> 
+             <a href="#database" >Database </a>
+             <a href="#config" >Configuración</a>
+             <a href="#models" >Models</a>
+              <a href="#routing" >Routing</a>
+         </div>
       </div>
       <div class="col-md-10">
              <h2 id="database"> Database</h2>
          <ol>
-             <li><h3  id="config"> Configurando la base de datos</h3> </li>
-         <p> Para asignar la base de datos hay que pasar por multiples archivos, el primero es gorm.go </p>
-         <p> ---- gorm.go esta en <b><i><em> app > controllers > gorm.go </em></i></b>  y en la linea 27 los
-         datos a modificar</p> 
-         <img src="public/img/db_gorm.png" alt="">
-         <p>El siguiente archivo esta en <b><i><em>conf > app.conf </em></i></b> al inicio del archihvo esta la configuración</p>
-         <img src="public/img/db_app.conf.png" alt="">
-         <h2 id="routing"> Routing</h2> 
+             <li>
+                 <h3  id="config"> Configurando la base de datos</h3>
+                 <p> Para asignar la base de datos hay que pasar por multiples archivos, el primero es gorm.go </p>
+                 <p> ---- gorm.go esta en <b><i><em> app > controllers > gorm.go </em></i></b>  y en la linea 27 los
+                 datos a modificar</p> 
+                 <img src="public/img/db_gorm.png" alt="">
+                 <p>El siguiente archivo esta en <b><i><em>conf > app.conf </em></i></b> al inicio del archihvo esta la configuración</p>
+                 <img src="public/img/db_app.conf.png" alt="">
+             </li>
+                 <li>
+                     <h3 id="models"> Models </h3>
+                     <p>Inclui un sistema de 
+                     <a href="https://es.wikipedia.org/wiki/Mapeo_objeto-relacional" target="_blank">ORM</a> 
+                     en Revel para representar tablas,querys, y demas funciones de sql, solo que las hacemos de manera más facil,
+                     utilizando el lenguaje de programación de nuestro aplicación en vez de sql, en nuestro caso GO</p>
+                     <p> Podemos encontrar nuestros modelos en <b><i><em> app > models </em></i></b></p>
+                     <p> Ejemplo de una tabla <i>(model)</i></p>
+                     <img src="public/img/model.png" alt=""/>
+                     <p></p>    
+                     <p>Más info:</p>
+                         <ul>
+                             <li><a href="https://golang.org/ref/spec#Numeric_types" target="_blank">Data types</a></li>
+                             <li><a href="http://doc.gorm.io" target="_blank">Gorm Docs</a></li>
+                         </ul>
+                 </li>
+                 <h2 id="routing"> Routing</h2> 
+                 <p> Las rutas se manejan desde un archivo llamado routes</p>
+                 <p> routes esta en: <b><i><em>  conf > routes</em></i></b></p>
+                 <img src="public/img/routes.png" alt=""/>
+                 <p></p>
+                 <p>Tiene un formato muy sencillo <b><i><em> metodo http -- ruta --  controller</em></i></b></p>
          <ol>
       </div>
     </div>
