--- a/bento/src/app/app.component.html
+++ b/bento/src/app/app.component.html
@@ -1,10 +1,14 @@
 <section id="page">
     <header> <h1> Test Page </h1> </header>
     <nav>
+        <!-- RouterLinkActive it's a class from Angular than let us highlight the button when
+            it's selected, routerLinkActiveOptions it's used to ensure that only will happen on selected -->
         <a [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}" routerLink="/">Home</a>
         <a [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}" class="" routerLink="/crud">crud</a>
     </nav>
     <main>
+        <!-- This components returns the component specified in the app-routing module
+            in the variable const routes -->
         <router-outlet></router-outlet>
     </main>
     <footer> <p> Footer</p></footer>
