Added a event, tested some stuff, bugs reduced from many to 1

--- a/bento/src/app/create-product/create-product.component.html
+++ b/bento/src/app/create-product/create-product.component.html
@@ -1,5 +1,5 @@
 <div>
-    <form action="#" method="POST" accept-charset="utf-8">
+    <form action="" method="POST" accept-charset="utf-8">
         <label>name: <span>{{product.code}} </span>
             <br>
             <span>price: </span>{{product.price}}
