--- a/bento/src/app/crud/crud.component.html
+++ b/bento/src/app/crud/crud.component.html
@@ -1,5 +1,14 @@
+<h2> Users List </h2>
+<app-users-table>
+</app-users-table>
+
+<!--
+  <h1 class="mat-h1">Users</h1>
 <ul *ngIf="users"> <!-- Angular if, if items (object in home.component.ts) render this. -->
+<!--
     <li *ngFor="let user of users"> <!-- Angular for -->
+<!--
+  <h1 class="mat-h1">Users</h1>
       {{user.UserName}}
       {{user.UserAge}}
       {{user.UserEmail}}
@@ -9,8 +18,5 @@
       </form>
    </li>
 </ul>
-<h2> Create User </h2>
     <app-create-product (created)="refresh($event)"></app-create-product>
-<p>
-  crud works!
-</p>
+-->
