--- a/bento/src/app/app.component.css
+++ b/bento/src/app/app.component.css
@@ -11,26 +11,21 @@ h2, h3 {
 }
 body {
     height: 100%;
+    width: 100%;
 }
+
 body, input[text], button {
     color: #888;
     font-family: Cambria, Georgia;
 }
 /* everywhere else */
+
 * {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#page {
-    display: grid;
-    width: 100%;
-    height:100vh;
-    grid-template: [header-left] "head head head" 11% [header-right]
-                 [main-left]   "nav main main" 79%  [main-right]
-                 [footer-left] "nav foot foot" 10% [footer-right]
-                 / 15% 1fr;
-}
 
+/*
 header {
     background-color: #1b1b1b;
     color: white;
@@ -43,7 +38,9 @@ header h1{
     margin: auto;
     color: white;
 }
+*/
 
+/*
 nav {
     background-color: #212121;
     border-right: 5px solid #1b1b1b;
@@ -57,17 +54,26 @@ nav a {
     text-decoration: none;
     background-color: #f44336;
 }
+*/
 
+/*
+.sidenav-container{
+    grid-area: nav;
+}
+*//*
 .active{
     background-color: red !important;
 }
 
 main {
     color: #eeeeee;
+    min-height: 100vh;
     padding: 16px;
-    background-color: #212121;
+    /* background-color: #212121; */
+    /*
     grid-area: main;
 }
+
 
 footer {
     color: #eeeeee;
@@ -81,4 +87,15 @@ footer p{
     margin: auto;
     color: white;
 }
+
+#page {
+    display: grid;
+    width: 100%;
+    display: grid;
+    grid-template: /*[header-left] "head head head" 11% [header-right]
+                 [main-left]   "nav main main" 79%  [main-right]
+                 /*[footer-left] "nav main main" 10% [footer-right]
+                 / 15% 1fr;
+}
+*/
 
