--- a/bento/src/app/users-table/users-table.component.html
+++ b/bento/src/app/users-table/users-table.component.html
@@ -7,7 +7,7 @@
     <ng-container matColumnDef="Options">
      <th mat-header-cell *matHeaderCellDef mat-sort-header> Options </th>
       <td mat-cell *matCellDef="let row" >
-          <button mat-flat-button> <mat-icon>delete</mat-icon> </button>
+          <button mat-flat-button type="button" (click)="deleteUser(row.Id)"> <mat-icon>delete</mat-icon> </button>
       </td>
     </ng-container>
 
