--- a/bento/src/app/users-table/users-table.component.html
+++ b/bento/src/app/users-table/users-table.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <h1 class="mat-h1">Usuarios</h1>
 <div class="mat-elevation-z2">
+
+    <img src="http://localhost:9000/image/nube.png" alt=" "/>
   <table mat-table #table [dataSource]="dataSource" matSort style="width: 100%;">
 
     <!-- button -->
